
Base settings (including Org habits settings) were being overwritten with =undefined= values when the sync backend config file didn't contain those fields. This happened when using an older config file or when settings were added after the initial config file was created.

Settings now correctly persist from localStorage even when the config file is missing specific fields.

* [2025-12-01 Mon]

** Added

*** Add "#" and "%" as valid characters for tag searches

PR: https://github.com/200ok-ch/organice/pull/1055

Thank you [[https://github.com/cperl82][cperl82]] for the PR🙏

** Fixed

*** Dropbox sorting

The old Dropbox sorting could do the wrong thing when the sort
comparator is called with the first argument being a file and the
second argument being a folder.

PR: https://github.com/200ok-ch/organice/pull/1054

Thank you [[https://github.com/cperl82][cperl82]] for the PR🙏

*** On Chrome > 137: GitLab sign-in for private repository fails with "Unexpected sign in error, please try again"

PR: https://github.com/200ok-ch/organice/pull/1061

Thank you [[github.com/mcwitt][mcwitt]] for the PR and [[https://github.com/dtvillafana][dtvillafana]] for support and testing🙏

* [2025-10-22 Wed]

** Changed

*** "Set scheduled datetime" action uses two different icons

Issue: https://github.com/200ok-ch/organice/issues/1052

** Fixed

*** Components/OrgFile/TimestampEditor: Incorrect Timestamp Format

PR: https://github.com/200ok-ch/organice/pull/1053
Thank you [[https://github.com/vHugoObject][vHugoObject]] for the PR🙏

* [2025-08-11 Mon]

** Changed

*** Refactored =TableEditorModal= from class to functional component

- Converted TableEditorModal to a functional component for better maintainability
- This refactor lays the groundwork for future table enhancements, including touch scrolling support
- No functional changes to the TableEditorModal's behavior

PR: https://github.com/200ok-ch/organice/pull/1043